# GLITCH

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  rego_python.yml  tests.yml  vscode-extension.yml
configs/: SLAC_ansible.ini  SLAC_chef.ini  SLIC_puppet.ini  default.ini  design_chef.ini  design_puppet.ini  improved.ini
glitch/: __main__.py  exceptions.py  helpers.py  stats.py  tech.py
glitch/analysis/: design.py  rules.py  security.py  utils.py
glitch/analysis/checkers/: string_checker.py  transverse_checker.py  var_checker.py
glitch/analysis/design/: duplicate_block.py  imperative_abstraction.py  improper_alignment.py  long_resource.py  long_statement.py  misplaced_attribute.py  multifaceted_abstraction.py  smell_checker.py  too_many_variables.py  unguarded_variable.py  visitor.py
glitch/analysis/expr_checkers/: string_checker.py  transverse_checker.py  var_checker.py
glitch/analysis/security/: __init__.py  (+16 more)
glitch/configs/: default.ini  default.json  terraform.ini
glitch/files/: api_gateways  dangerous_image_tags  databases_and_kvs  deprecated_official_docker_images  docker_log_drivers  log_collectors_and_aggregators  message_queues_and_event_brokers  obsolete_commands  official_docker_images
glitch/parsers/: ansible.py  chef.py  cmof.py  docker.py  docker_parser.py  gha.py  nomad.py  parser.py  puppet.py  ripper_parser.py  swarm.py  terraform.py  yaml.py
glitch/rego/: engine.py
glitch/rego/rego_python/: README.md  pyproject.toml
glitch/rego/rego_python/src/rego_python/: __init__.py  wrapper.py
glitch/rego/rego_python/src/rego_python/go/: go.mod  go.sum  regolib.go
glitch/repr/: inter.py
glitch/stats/: print.py  stats.py
ruby-parser/: grammar
scripts/: README.md  docker_images_scraper.py  obsolete_commads_scraper.py  requirements.txt
stubs/: z3.pyi
stubs/pkg_resources/: __init__.pyi
stubs/ply/: lex.pyi  yacc.pyi
tests/: base_test.py
tests/cli/: test_cli.py
tests/design/: design_helper.py
tests/hierarchical/: test_parsers.py
tests/security/: security_helper.py
thesis/: __main__.py  exceptions.py
thesis/analysis/: rules.py
thesis/parsers/: cmof.py  parser.py  ruby_parser.py
thesis/repr/: inter.py
vscode-extension/glitch/: CHANGELOG.md  README.md  package-lock.json  package.json
(+607 files in other folders)
